--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
    <li><a href="html/page_RefObjectBase.html">RefObjectBase</a></li>
    <li><a href="html/page_DestroyGuard.html">DestroyGuard</a></li>
    <li><a href="html/page_RangeDel.html">RangeDel</a></li>
+   <li><a href="html/page_Pow.html">Pow</a></li>
   </ol>
  </li>
 
