--- a/index.html
+++ b/index.html
@@ -278,6 +278,7 @@
    <li><a href="html/page_FileSystem.html">FileSystem</a></li>
    <li><a href="html/page_DirTreeRun.html">DirTreeRun</a></li>
    <li><a href="html/page_BinaryFile.html">Binary</a></li>
+   <li><a href="html/page_LaunchPath.html">LaunchPath</a></li>
   </ol>
  </li>
 
@@ -390,6 +391,7 @@
    <li><a href="html/page_HCore_SysTime.html">SysTime</a></li>
    <li><a href="html/page_HCore_SysTlsSlot.html">SysTlsSlot</a></li>
    <li><a href="html/page_HCore_SysWait.html">SysWait</a></li>
+   <li><a href="html/page_HCore_SysLaunchPath.html">SysLaunchPath</a></li>
    <li><a href="html/page_HCore_PlanInit_CCore.html">PlanInit_CCore</a></li>
   </ol>
  </li>
