--- a/html/page_HCoreTargets.html
+++ b/html/page_HCoreTargets.html
@@ -71,6 +71,7 @@ features to your target by adding extra source files.
         <a href="page_HCore_SysTime.html">SysTime.h</a>
         <a href="page_HCore_SysTlsSlot.html">SysTlsSlot.h</a>
         <a href="page_HCore_SysWait.html">SysWait.h</a>
+        <a href="page_HCore_SysLaunchPath.html">SysLaunchPath.h</a>
     <b>src</b>
       <b>base</b>
         PlatformBase.cpp
@@ -94,6 +95,7 @@ features to your target by adding extra source files.
         SysTime.cpp
         SysTlsSlot.cpp
         SysWait.cpp
+        SysLaunchPath.cpp
       <a href="page_HCore_PlanInit_CCore.html">PlanInit_CCore.cpp</a>
     <b>test</b>
       test6XXX.NNN.cpp
