--- a/html/page_CCoreGeneral.html
+++ b/html/page_CCoreGeneral.html
@@ -76,6 +76,7 @@ ans <b>".s"</b> for assembler source files.
 Create the <b>Makefile</b>. Select and create a subdirectory for 
 object files (and other intermediate files), usually <b>.obj</b>. Then issue the command <b>make</b>
 from the <b>Cygwin</b> console. If you change the source file set, then issue the command <b>make list</b>.
+You may also erase dependency files using the command <b>make dep</b> (sometimes required).
 </p>
 
 <p>
