--- a/html/page_Utf8.html
+++ b/html/page_Utf8.html
@@ -1,5 +1,5 @@
 <!--
-/* page_XXX.html */
+/* page_Utf8.html */
 //----------------------------------------------------------------------------------------
 //
 //  Project: CCore 3.50
@@ -18,7 +18,7 @@
 
 <head>
 
- <title>CCore -> XXX</title>
+ <title>CCore -> Utf8</title>
 
  <link href="CCore.css" rel="stylesheet" type="text/css">
 
@@ -26,9 +26,13 @@
 
 <body>
 
-<h2>XXX</h2>
+<h2>Utf8</h2>
 
-<p class="Files">Files <b>CCore/inc/XXX.h</b> <b>CCore/src/XXX.cpp</b></p>
+<p class="Files">Files <b>CCore/inc/Utf8.h</b> <b>CCore/src/Utf8.cpp</b></p>
+
+<p>
+This file contains a set of tools to work with UTF8 encoding.
+</p>
 
 
 </body>
