--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
    <li><a href="html/page_Fifo.html">Fifo</a></li>
    <li><a href="html/page_SafeBuf.html">SafeBuf</a></li> 
    <li><a href="html/page_Crc.html">Crc</a></li>
-   <li><a href="html/page_StrKey.html">StrKey</a></li> -----
+   <li><a href="html/page_StrKey.html">StrKey</a></li> 
+   <li><a href="html/page_Utf8.html">Utf8</a></li> -----
    <li><a href="html/page_PrintStem.html">PrintStem</a></li>
    <li><a href="html/page_CapString.html">CapString</a></li>
    <li><a href="html/page_MakeString.html">MakeString</a></li>
