--- a/html/page_Cmp.html
+++ b/html/page_Cmp.html
@@ -202,9 +202,17 @@ bool <span class="Att">StrLessOf</span>(const T &amp;a,const T &amp;b) { return 
 </pre>
 
 <p>
-<span class="Alert">Starting from the version 3.50 comparision is performed using the <b>uint8</b> character code.</span>
-It makes these operations UTF8-compartible.
+<span class="Alert">Starting from the version 3.50 comparision is performed using the <b>unsigned</b> character code.</span>
+It makes these operations UTF8-compatible. To compare single characters the following two functions has been added:
 </p>
+
+<pre>
+
+inline CmpResult <span class="Att">CharCmp</span>(char a,char b) { return LessCmp((unsigned char)a,(unsigned char)b); }
+
+inline bool <span class="Att">CharLess</span>(char a,char b) { return (unsigned char)a<(unsigned char)b; }
+
+</pre>
 
 <p>
 The class <b>CmpAsStr</b> is an adapter class to help combine the string comparison with the string extraction:
