--- a/html/page_SymCount.html
+++ b/html/page_SymCount.html
@@ -30,6 +30,63 @@
 
 <p class="Files">Files <b>CCore/inc/SymCount.h</b> <b>CCore/src/SymCount.cpp</b></p>
 
+<p>
+This file provides simple tools to count symbols in a text.
+</p>
+
+<h3>SymCount()</h3>
+
+<p>
+<b>SymCount()</b> counts the number of symbols in a text string. In UTF8-compatible mode it differs than the number of characters.
+</p>
+
+<pre>
+
+ulen <span class="Att">SymLen</span>(StrLen text);
+
+</pre>
+
+<h3>SymDetector</h3>
+
+<pre>
+
+class <span class="Att">SymDetector</span> : NoCopy
+ {
+
+  public:
+
+   SymDetector() { reset(); }
+
+   void reset();
+
+   bool put(char ch);
+ };
+
+</pre>
+
+<h3>SymCounter</h3>
+
+<pre>
+
+class <span class="Att">SymCounter</span> : NoCopy
+ {
+   ulen count;
+   SymDetector det;
+
+  public:
+
+   SymCounter() : count(0) {}
+
+   operator ulen() const { return count; }
+
+   void put(char ch);
+
+   void put(char ch,ulen len);
+
+   void put(const char *str,ulen len);
+ };
+
+</pre>
 
 </body>
 
