--- a/html/page_CmdInput.html
+++ b/html/page_CmdInput.html
@@ -65,7 +65,7 @@ class <span class="Att">CmdInput</span> : NoCopy
    
    void start();
   
-   bool put(char ch);
+   bool put(ReadConCode ch);
    
    void put(StrLen str);
    
