--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 
  <li><a href="html/page_ConsoleInput.html">Console input</a>
   <ol>
-   <li><a href="html/page_InputUtils.html">InputUtils</a> <span class="Alert">TODO</span> </li> 
+   <li><a href="html/page_InputUtils.html">InputUtils</a></li> 
    <li><a href="html/page_LineInput.html">LineInput</a></li>
    <li><a href="html/page_CmdInput.html">CmdInput</a></li>
   </ol>
