--- a/html/page_ConsoleInput.html
+++ b/html/page_ConsoleInput.html
@@ -212,7 +212,7 @@ enum <span class="Att">ConInputResult</span>
  
 /* types */  
 
-using ConInputFunction = Function&lt;ConInputResult (char)&gt; ;
+using ConInputFunction = Function&lt;ConInputResult (ReadConCode)&gt; ;
 
 /* class OwnConInput */
 
