--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
    <li><a href="html/page_Crc.html">Crc</a></li>
    <li><a href="html/page_StrKey.html">StrKey</a></li> 
    <li><a href="html/page_Utf8.html">Utf8</a></li> 
+   <li><a href="html/page_Symbol.html">Symbol</a></li>
    <li><a href="html/page_SymCount.html">SymCount</a></li> -----
    <li><a href="html/page_PrintStem.html">PrintStem</a></li>
    <li><a href="html/page_CapString.html">CapString</a></li>
