--- a/html/page_InputUtils.html
+++ b/html/page_InputUtils.html
@@ -40,13 +40,13 @@ This file contains a set of simple tools to work with console input.
 
 inline constexpr unsigned <span class="Att">MaxSymbolLen</span> = .... ;
 
-int <span class="Att">ToChar</span>(ReadConCode ch);
+int <span class="Att">ToChar</span>(Symbol ch);
 
-ulen <span class="Att">SymbolLen</span>(ReadConCode ch);
+ulen <span class="Att">SymbolLen</span>(Symbol ch);
 
-StrLen <span class="Att">SymbolRange</span>(const ReadConCode &ch);
+StrLen <span class="Att">SymbolRange</span>(const Symbol &ch);
 
-ulen <span class="Att">PutSymbol</span>(char *ptr,ulen len,ReadConCode ch);
+ulen <span class="Att">PutSymbol</span>(char *ptr,ulen len,Symbol ch);
 
 ulen <span class="Att">PopSymbol</span>(const char *ptr,ulen len); // len > 0
 
@@ -57,7 +57,7 @@ ulen <span class="Att">PopSymbol</span>(const char *ptr,ulen len); // len > 0
 </p>
 
 <p>
-<b>ToChar()</b> converts a <b>ReadConCode</b> value to the <b>char</b> value (represented using <b>int</b> type).
+<b>ToChar()</b> converts a <b>Symbol</b> value to the <b>char</b> value (represented using <b>int</b> type).
 In UTF8-compatible mode the result is -1, if the symbol is not single character length (i.e. not a basic ASCII symbol). 
 </p>
 
@@ -128,13 +128,13 @@ class <span class="Att">ReadConBase</span> : NoCopy
 
    // get
 
-   bool try_get(ReadConCode &ret);
+   bool try_get(Symbol &ret);
 
-   ReadConCode get();
+   Symbol get();
 
-   bool get(MSec timeout,ReadConCode &ret);
+   bool get(MSec timeout,Symbol &ret);
 
-   bool get(TimeScope time_scope,ReadConCode &ret);
+   bool get(TimeScope time_scope,Symbol &ret);
  };
 
 </pre>
@@ -166,7 +166,7 @@ class <span class="Att">SymbolParser</span> : NoCopy
 
    bool feed(StrLen &text);
 
-   ReadConCode get();
+   Symbol get();
  };
 
 </pre>
