--- a/html/page_CharProp.html
+++ b/html/page_CharProp.html
@@ -171,6 +171,8 @@ class <span class="Att">ExtCharCode</span>
 
    explicit ExtCharCode(const Utf8Code &code_) : code(code_) {}
 
+   explicit ExtCharCode(Unicode ch) : code(ToUtf8(ch)) {}
+
    void print(PrinterType &out) const;
  };
 
