--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
      <li><a href="html/page_StrParse.html">Simple string parsing</a></li>
      <li><a href="html/page_CharProp.html">Basic character properties</a></li>
      <li><a href="html/page_TextTools.html">Text tools</a></li>
+     <li><a href="html/page_CharUtils.html">Character utilities</a></li>
     </ol>
    </li>
    <li><a href="html/page_Files.html">Files</a></li>
