--- a/html/page_Utf8.html
+++ b/html/page_Utf8.html
@@ -216,7 +216,7 @@ and converts it to the Unicode value. In case of error the value <b>Unicode(-1)<
 
 <p>
 <b>CutUtf8_unicode()</b> extracts the next UTF8 symbol from the non-empty text (argument <b>text</b> is updated)
-and converts it to the Unicode value. In case of error the value <b>Unicode(-1)</b> is returned.
+and converts it to the Unicode value. In case of error the value <b>Unicode(-1)</b> is returned and <span class="Alert"><b>text</b> is not updated</span>.
 </p>
 
 <p>
